--- a/sites/bubble/.htaccess
+++ b/sites/bubble/.htaccess
@@ -1,6 +1,6 @@
 //Caching schema
 <FilesMatch "\.(jpg|png|css|js|svg|gif)$">
-Header set Cache-Control "private, max-age=300”
+Header set Cache-Control "private, max-age=600"
 </FilesMatch>
 <FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf)(\.gz)?$">
 Header set Expires "Thu, 15 Apr 2012 20:00:00 GMT"
